Switch Java Level to 17